--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Portfolio Page</title>
-    <meta property="og:title" content="Portfolio Page" />
+    <title>HashtagMarky Portfolio</title>
+    <meta property="og:title" content="Portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -12,7 +12,7 @@
     </style>
     <style data-tag="default-style-sheet">
       html {
-        font-family: Arial;
+        font-family: Overpass;
         font-size: 16px;
       }
 
