--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
     <style data-tag="default-style-sheet">
       html {
-        font-family: Arial;
+        font-family: Overpass;
         font-size: 16px;
       }
 
@@ -116,8 +116,8 @@
               <span class="home-text">Hi there, I'm</span>
               <h1 class="home-heading2">HASHTAGMARKY</h1>
               <span class="home-text01">
-                I’m a self-taught rom hacker, who is currently working on
-                multiple projects, including Pokémon Nova.
+                a self-taught rom hacker, who is currently working on multiple
+                projects, including Pokémon Nova.
               </span>
               <div class="home-cta-btn-container"></div>
             </div>
@@ -269,6 +269,7 @@
                 </svg>
               </a>
             </div>
+            <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support Me on Ko-fi', '#DD8738', 'L4L4UVVP7');kofiwidget2.draw();</script> 
           </div>
         </div>
       </div>
