--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </svg>
               </a>
               <a
-                href="https://YouTube.com/@hashtagmarky5953"
+                href="https://YouTube.com/@hashtag-marky"
                 target="_blank"
                 rel="noreferrer noopener"
                 class="home-link10"
