--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               </div>
             </a>
             <a
-              href="https://GitHub.com/hashtagmarky/labradorescent-lights"
+              href="https://ko-fi.com/s/018e2d43d3"
               target="_blank"
               rel="noreferrer noopener"
               class="home-link05"
