--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
               <span>
                 I began developing Pokémon Nova, my latest project, in 2024,
                 with it being my most ambitious yet. Most of my time developing
-                is spent on Nova, hoping to deliver a truly unique experience.
-                With this in mind, I am always open to feedback and fresh ideas.
+                is spent on Nova, hoping to deliver a completely original and
+                truly unique experience. With this in mind, I am always open to
+                feedback and fresh ideas.
               </span>
               <br class="Section-Text" />
               <br class="Section-Text" />
@@ -137,13 +138,16 @@
                 Unlike Nova, my first two projects are dedicated to my partner,
                 two games designed with them almost exclusively in mind. While
                 Nova is a sequel to them both, you do not need to play them in
-                order to experience Nova in full.
+                order to experience Nova in full. As projects dedicated to just
+                one player, they rely heavily on the works of other rom hackers,
+                namely danenders. Like the repositories these projects were
+                forked from, the source code is public.
               </span>
             </span>
           </div>
           <div class="home-cards-container">
             <a
-              href="https://GitHub.com/hashtagmarky/nova"
+              href="https://ko-fi.com/s/8549dab3dc"
               target="_blank"
               rel="noreferrer noopener"
               class="home-link04"
@@ -187,7 +191,7 @@
               </div>
             </a>
             <a
-              href="https://GitHub.com/hashtagmarky/stellar-spirits"
+              href="https://ko-fi.com/s/c941d3db1f"
               target="_blank"
               rel="noreferrer noopener"
               class="home-link06"
