--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                 order to experience Nova in full. As projects dedicated to just
                 one player, they rely heavily on the works of other rom hackers,
                 namely danenders. Like the repositories these projects were
-                forked from, the source code is public.
+                forked from, the source code is publicly available on my GitHub
+                page.
               </span>
             </span>
           </div>
