--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="home-icon-container">
                   <img
                     alt="image"
-                    src="public/74d1ee6499be5777b9624f987d5c195a-1400h.png"
+                    src="public/beta-nova-logo.png"
                     class="home-image1"
                   />
                 </div>
