--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="home-icon-container">
                   <img
                     alt="image"
-                    src="public/beta-nova-logo.png"
+                    src="public/beta-nova-logo-1700h.png"
                     class="home-image1"
                   />
                 </div>
@@ -167,7 +167,7 @@
               </div>
             </a>
             <a
-              href="https://ko-fi.com/s/018e2d43d3"
+              href="https://github.com/HashtagMarky/Labradorescent-Lights/releases/tag/demo"
               target="_blank"
               rel="noreferrer noopener"
               class="home-link05"
@@ -176,7 +176,7 @@
                 <div class="home-icon-container1">
                   <img
                     alt="image"
-                    src="public/aria-asa-res-400h.png"
+                    src="public/box-art-v3-400h.png"
                     class="home-image2"
                   />
                 </div>
@@ -192,7 +192,7 @@
               </div>
             </a>
             <a
-              href="https://ko-fi.com/s/c941d3db1f"
+              href="https://github.com/HashtagMarky/Stellar-Spirits"
               target="_blank"
               rel="noreferrer noopener"
               class="home-link06"
@@ -201,7 +201,7 @@
                 <div class="home-icon-container2">
                   <img
                     alt="image"
-                    src="public/lauren-samuel-res-1400h.png"
+                    src="public/lauren-samuel-res-1700h.png"
                     class="home-image3"
                   />
                 </div>
