--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               <h1 class="home-heading2">HASHTAGMARKY</h1>
               <span class="home-text01">
                 a self-taught rom hacker, who is currently working on multiple
-                projects, including Pokémon Nova.
+                projects, including Pokémon Ikigai.
               </span>
               <div class="home-cta-btn-container"></div>
             </div>
@@ -126,23 +126,23 @@
             <h2 class="home-text02 Section-Heading">Projects</h2>
             <span class="home-text03">
               <span>
-                I began developing Pokémon Nova, my latest project, in 2024,
+                I began developing Pokémon Ikigai, my latest project, in 2024,
                 with it being my most ambitious yet. Most of my time developing
-                is spent on Nova, hoping to deliver a completely original and
+                is spent on Ikigai, hoping to deliver a completely original and
                 truly unique experience. With this in mind, I am always open to
                 feedback and fresh ideas.
               </span>
               <br class="Section-Text" />
               <br class="Section-Text" />
               <span>
-                Unlike Nova, my first two projects are dedicated to my partner,
+                Unlike Ikigai, my first two projects are dedicated to my partner,
                 two games designed with them almost exclusively in mind. While
-                Nova is a sequel to them both, you do not need to play them in
-                order to experience Nova in full. As projects dedicated to just
-                one player, they rely heavily on the works of other rom hackers,
-                namely danenders. Like the repositories these projects were
-                forked from, the source code is publicly available on my GitHub
-                page.
+                Ikigai is a sequel to them both, you do not need to play them in
+                order to experience Ikigai in full. As projects dedicated to
+                just one player, they rely heavily on the works of other rom
+                hackers, namely danenders. Like the repositories these projects
+                were forked from, the source code is publicly available on my
+                GitHub page.
               </span>
             </span>
           </div>
@@ -157,12 +157,12 @@
                 <div class="home-icon-container">
                   <img
                     alt="image"
-                    src="public/beta-nova-logo-1700h.png"
+                    src="public/ikigai-flat-square-1700h.png"
                     class="home-image1"
                   />
                 </div>
                 <div class="home-content-container">
-                  <span class="home-heading3 Card-Heading">Pokémon Nova</span>
+                  <span class="home-heading3 Card-Heading">Pokémon Ikigai</span>
                 </div>
               </div>
             </a>
