--- a/index.html
+++ b/index.html
@@ -135,14 +135,14 @@
               <br class="Section-Text" />
               <br class="Section-Text" />
               <span>
-                Unlike Ikigai, my first two projects are dedicated to my partner,
-                two games designed with them almost exclusively in mind. While
-                Ikigai is a sequel to them both, you do not need to play them in
-                order to experience Ikigai in full. As projects dedicated to
-                just one player, they rely heavily on the works of other rom
-                hackers, namely danenders. Like the repositories these projects
-                were forked from, the source code is publicly available on my
-                GitHub page.
+                Unlike Ikigai, my first two projects are dedicated to my
+                partner, two games designed with them almost exclusively in
+                mind. While Ikigai is a sequel to them both, you do not need to
+                play them in order to experience Ikigai in full. As projects
+                dedicated to just one player, they rely heavily on the works of
+                other rom hackers, namely danenders. Like the repositories these
+                projects were forked from, the source code is publicly available
+                on my GitHub page.
               </span>
             </span>
           </div>
