Remove .html Extension

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					I'm <strong>HashtagMarky</strong>, a self-taught<br />
 					rom hacker, who is currently working<br />
 					on multiple projects, including<br />
-					<a href="./ikigai.html">Pokémon Ikigai</a>.</h1>
+					<a href="./ikigai">Pokémon Ikigai</a>.</h1>
 				</div>
 			</header>
 
@@ -99,7 +99,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Contact Me</h2>
-						<p>In order to get in touch with me, whether it be for suggestions or working together, please feel free to reach out to me on <a href="https://twitter.com/hmprods">Twitter</a>, <a href="./disocrd.html">Discord</a> or by using any of the other links on this page.</p>
+						<p>In order to get in touch with me, whether it be for suggestions or working together, please feel free to reach out to me on <a href="https://twitter.com/hmprods">Twitter</a>, <a href="./disocrd">Discord</a> or by using any of the other links on this page.</p>
 						<!--
 						<div class="row">
 							<div class="col-8 col-12-small">
@@ -465,7 +465,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://github.com/HashtagMarky" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://x.com/hmprods" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="./disocrd.html" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+						<li><a href="./disocrd" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 						<li><a href="https://tiktok.com/@HashtagMarky" class="icon brands fa-tiktok"><span class="label">Tiktok</span></a></li>
 						<li><a href="https://YouTube.com/@hashtag-marky" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 					</ul>
