Remove Twitter and Discord Links in Text

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Contact Me</h2>
-						<p>In order to get in touch with me, whether it be for suggestions or working together, please feel free to reach out to me on <a href="https://twitter.com/hmprods">Twitter</a>, <a href="./discord">Discord</a> or by using any of the other links on this page.</p>
+						<p>In order to get in touch with me, whether it be for suggestions or working together, please feel free to reach out to me using any of the links on this page.</p>
 						<!--
 						<div class="row">
 							<div class="col-8 col-12-small">
