--- a/404.html
+++ b/404.html
@@ -1,5 +1,7 @@
-<!DOCTYPE HTML>
-<html>
-	<head>
-        <meta http-equiv="refresh" content="0"; URL="./" />
-	</head>
+{{ define "main" }}
+  <main id="main">
+    <div>
+      <h1 id="title"><a href="{{ "" | relURL }}">Go Home</a></h1>
+    </div>
+  </main>
+{{ end }}
