--- a/404.html
+++ b/404.html
@@ -1,7 +1,64 @@
-{{ define "main" }}
-  <main id="main">
-    <div>
-      <h1 id="title"><a href="{{ "" | relURL }}">Go Home</a></h1>
-    </div>
-  </main>
-{{ end }}
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Error 404</title>
+		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
+        <meta http-equiv="refresh" content="5; url=http://hashtagmarky.github.io/" />
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+    <body class="is-preload">
+
+		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a href="#" class="image avatar"><img src="images/infernape/ranger-infernape-mugshot-square.png" alt="" /></a>
+					<h1>Hi there!<br /> 
+					I'm <strong>HashtagMarky</strong>, a self-taught<br />
+					rom hacker, who is currently working<br />
+					on multiple projects, including<br />
+					<a href="./ikigai">Pokémon Ikigai</a>.</h1>
+				</div>
+			</header>
+
+		<!-- Main -->
+			<div id="main">
+
+				<!-- One -->
+					<section id="one">
+						<header class="major">
+							<h2 style="text-align: center;">Error 404</h2>
+						</header>
+						<p style="text-align: center;">It seems you're trying to get to a page that I haven't built yet.<br />
+                        If you're not automatically redirected,<br />
+                        click <a href="./">here</a> to return to the main site.</p>
+					</section>
+				
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://github.com/HashtagMarky" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://x.com/hmprods" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="./discord" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+						<li><a href="https://tiktok.com/@HashtagMarky" class="icon brands fa-tiktok"><span class="label">Tiktok</span></a></li>
+						<li><a href="https://YouTube.com/@hashtag-marky" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; HashtagMarky<li>&copy; #M Productions</li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
