Update Text Styles

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						<header class="major">
 							<h2 style="text-align: center;">Projects</h2>
 						</header>
-						<p style="text-align: center;">I began developing Pokémon Ikigai, my latest project, in 2024, with it being my most ambitious yet. Most of my time developing is spent on Ikigai, hoping to deliver a completely original and truly unique experience. With this in mind, I am always open to feedback and fresh ideas.</p>
-						<p style="text-align: center;">Unlike Ikigai, my first two projects are dedicated to my partner, two games designed with them almost exclusively in mind. Whilst Ikigai is a sequel to them both, you do not need to play them in order to fully experience Ikigai. While being projects dedicated to just one player, they rely heavily on the works of other rom hackers, namely danenders. Like the repositories these projects were forked from, the source code is publicly available on my GitHub page.</p>
+						<p style="text-align: center;">I began developing <strong>Pokémon Ikigai</strong>, my latest project, in 2024, with it being my most ambitious yet. Most of my time developing is spent on <strong>Ikigai</strong>, hoping to deliver a completely original and truly unique experience. With this in mind, I am always open to feedback and fresh ideas.</p>
+						<p style="text-align: center;">Unlike <strong>Ikigai</strong>, my first two projects are dedicated to my partner, two games designed with them almost exclusively in mind. Whilst <strong>Ikigai</strong> is a sequel to them both, you do not need to play them in order to fully experience <strong>Ikigai</strong>. While being projects dedicated to just one player, they rely heavily on the works of other rom hackers, namely <strong>danenders</strong>. Like the repositories these projects were forked from, the source code is publicly available on my <a href="https://github.com/hashtagmarky">GitHub</a>.</p>
 						<!-- Learn More Button
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
