Add Buttons to View Projects

--- a/index.html
+++ b/index.html
@@ -46,31 +46,28 @@
 								<a href="images/projects/ikigai-flat-square.png" class="image fit thumb"><img src="images/projects/ikigai-flat-square.png" alt="" /></a>
 								<h3>Pokémon Ikigai</h3>
 								<p>My first original work, bringing a fresh experience.</p>
-								<!-- Learn More Button
+								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
 								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
+									<li><a href="./ikigai" class="button">Learn More About this Production</a></li>
 								</ul>
-								-->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/projects/lablights-box-art-v3.png" class="image fit thumb"><img src="images/projects/lablights-box-art-v3.png" alt="" /></a>
 								<h3>Pokémon Labradorescent Lights</h3>
 								<p>A curated take on the Generation III adventure.</p>
-								<!-- Learn More Button
+								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
 								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
+									<li><a href="./lablights" class="button">Learn More About this Production</a></li>
 								</ul>
-								-->
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/projects/lauren-samuel-res.png" class="image fit thumb"><img src="images/projects/lauren-samuel-res.png" alt="" /></a>
 								<h3>Pokémon Stellar Sprits</h3>
 								<p>The Kantonian predecessor to Labradorescent Lights.</p>
-								<!-- Learn More Button
+								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
 								<ul class="actions">
-									<li><a href="#" class="button">Learn More</a></li>
+									<li><a href="./stellar" class="button">Learn More About this Production</a></li>
 								</ul>
-								-->
 							</article>
 							<!-- More Productions
 							<article class="col-6 col-12-xsmall work-item">
