Update Discord Links

--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<ul class="icons">
 						<li><a href="https://github.com/HashtagMarky" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://x.com/hmprods" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="./discord" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
-						<li><a href="https://tiktok.com/@HashtagMarky" class="icon brands fa-tiktok"><span class="label">Tiktok</span></a></li>
+						<li><a href="https://discord.gg/57QsBFdPQz" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
+						<li><a href="https://tiktok.com/@HashtagMarky" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
 						<li><a href="https://YouTube.com/@hashtag-marky" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
 					</ul>
 					<ul class="copyright">
