Update Error 404 Page

--- a/404.html
+++ b/404.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Error 404</title>
+		<title>Page Not Found</title>
 		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
         <meta http-equiv="refresh" content="5; url=http://hashtagmarky.github.io/" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="robots" content="noindex, nofollow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
     <body class="is-preload">
@@ -14,11 +15,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/infernape/ranger-infernape-mugshot-square.png" alt="" /></a>
-					<h1>Hi there!<br /> 
-					I'm <strong>HashtagMarky</strong>, a self-taught<br />
-					rom hacker, who is currently working<br />
-					on multiple projects, including<br />
-					<a href="./ikigai">Pokémon Ikigai</a>.</h1>
+					<h1><strong>Uh oh!</strong><br />
+					Well this is embarassing…</h1>
 				</div>
 			</header>
 
@@ -28,9 +26,9 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2 style="text-align: center;">Error 404</h2>
+							<h2 style="text-align: center;">Page Not Found</h2>
 						</header>
-						<p style="text-align: center;">It seems you're trying to get to a page that I haven't built yet.<br />
+						<p style="text-align: center;">It seems that I haven't built the page you're trying to get to yet.<br />
                         If you're not automatically redirected,<br />
                         click <a href="./">here</a> to return to the main site.</p>
 					</section>
