Update Redirect Page

--- a/discord.html
+++ b/discord.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Discord</title>
+		<title>Redirecting…</title>
 		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
         <meta http-equiv="refresh" content="5; url=https://discord.gg/57QsBFdPQz" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="robots" content="noindex, nofollow">
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
     <body class="is-preload">
@@ -14,11 +15,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/infernape/ranger-infernape-mugshot-square.png" alt="" /></a>
-					<h1>Hi there!<br /> 
-					I'm <strong>HashtagMarky</strong>, a self-taught<br />
-					rom hacker, who is currently working<br />
-					on multiple projects, including<br />
-					<a href="./ikigai">Pokémon Ikigai</a>.</h1>
+					<h1>Not to worry.<br />
+					You'll reach your <strong>destination</strong> soon.</h1>
 				</div>
 			</header>
 
@@ -28,7 +26,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2 style="text-align: center;">Discord</h2>
+							<h2 style="text-align: center;">Redirecting…</h2>
 						</header>
 						<p style="text-align: center;">If you're not automatically redirected,<br />
                         click <a href="https://discord.gg/57QsBFdPQz">here</a> to go to the requested site.</p>
