--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/infernape/ranger-infernape-mugshot-square.png" alt="" /></a>
 					<h1><strong>Uh oh!</strong><br />
-					Well this is embarassing…</h1>
+					This is embarassing…</h1>
 				</div>
 			</header>
 
