--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<h2>Productions</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/projects/ikigai-flat-square.png" class="image fit thumb"><img src="images/projects/ikigai-flat-square.png" alt="" /></a>
+								<a href="images/projects/beta-ikigai-box-art.png" class="image fit thumb"><img src="images/projects/beta-ikigai-box-art.png" alt="Pokémon Ikigai Box Art - Beta" /></a>
 								<h3>Pokémon Ikigai</h3>
 								<p>My first original work, bringing a fresh experience.</p>
 								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
@@ -52,7 +52,7 @@
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/projects/lablights-box-art.png" class="image fit thumb"><img src="images/projects/lablights-box-art.png" alt="" /></a>
+								<a href="images/projects/lablights-box-art.png" class="image fit thumb"><img src="images/projects/lablights-box-art.png" alt="Pokémon Labradorescent Lights Box Art" /></a>
 								<h3>Pokémon Labradorescent Lights</h3>
 								<p>A curated take on the Generation III adventure.</p>
 								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
@@ -61,7 +61,7 @@
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/projects/lauren-samuel-res.png" class="image fit thumb"><img src="images/projects/lauren-samuel-res.png" alt="" /></a>
+								<a href="images/projects/beta-stellar-box-art.png" class="image fit thumb"><img src="images/projects/beta-stellar-box-art.png" alt="Pokémon Stellar Spirits Box Art - Beta" /></a>
 								<h3>Pokémon Stellar Sprits</h3>
 								<p>The Kantonian predecessor to Labradorescent Lights.</p>
 								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
