--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<!-- HTML Meta Tags -->
 		<title>#M Productions</title>
-		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
+		<meta name="description" content="HashtgaMarky's Portfolio">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url" content="https://hashtagmarky.github.io">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="#M Productions">
+		<meta property="og:description" content="HashtgaMarky's Portfolio">
+		<!--
+		You can generate this image URL dynamically: https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/{site_text}/{title_text}/{image_url}/og.png
+		Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
+		For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
+		-->
+		<meta property="og:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/hashtagmarky.github.io/%23M-Productions/https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fdocuments%2Fe088232a-2261-45c1-888e-bba1f708e745.png%3Ftoken%3DSnkwC6Pl2coTmE5CzOfVQ5T1c-ERNqc8ysqszwD-VhQ%26height%3D1200%26width%3D1200%26expires%3D33247445914/og.png">
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="twitter:domain" content="hashtagmarky.github.io">
+		<meta property="twitter:url" content="https://hashtagmarky.github.io">
+		<meta name="twitter:title" content="#M Productions">
+		<meta name="twitter:description" content="HashtgaMarky's Portfolio">
+		<!--
+		You can generate this image URL dynamically: https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/{site_text}/{title_text}/{image_url}/og.png
+		Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
+		For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
+		-->
+		<meta name="twitter:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/hashtagmarky.github.io/%23M-Productions/https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fdocuments%2Fe088232a-2261-45c1-888e-bba1f708e745.png%3Ftoken%3DSnkwC6Pl2coTmE5CzOfVQ5T1c-ERNqc8ysqszwD-VhQ%26height%3D1200%26width%3D1200%26expires%3D33247445914/og.png">
+
+		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
 	</head>
 	<body class="is-preload">
 
