--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
 		For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
 		-->
-		<meta property="og:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/hashtagmarky.github.io/%23M-Productions/https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fdocuments%2Fe088232a-2261-45c1-888e-bba1f708e745.png%3Ftoken%3DSnkwC6Pl2coTmE5CzOfVQ5T1c-ERNqc8ysqszwD-VhQ%26height%3D1200%26width%3D1200%26expires%3D33247445914/og.png">
+		<meta property="og:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/hashtagmarky.github.io/%23M%20Productions/https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fdocuments%2Fe088232a-2261-45c1-888e-bba1f708e745.png%3Ftoken%3DSnkwC6Pl2coTmE5CzOfVQ5T1c-ERNqc8ysqszwD-VhQ%26height%3D1200%26width%3D1200%26expires%3D33247445914/og.png">
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
@@ -32,7 +32,7 @@
 		Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
 		For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
 		-->
-		<meta name="twitter:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/hashtagmarky.github.io/%23M-Productions/https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fdocuments%2Fe088232a-2261-45c1-888e-bba1f708e745.png%3Ftoken%3DSnkwC6Pl2coTmE5CzOfVQ5T1c-ERNqc8ysqszwD-VhQ%26height%3D1200%26width%3D1200%26expires%3D33247445914/og.png">
+		<meta name="twitter:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/hashtagmarky.github.io/%23M%20Productions/https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fdocuments%2Fe088232a-2261-45c1-888e-bba1f708e745.png%3Ftoken%3DSnkwC6Pl2coTmE5CzOfVQ5T1c-ERNqc8ysqszwD-VhQ%26height%3D1200%26width%3D1200%26expires%3D33247445914/og.png">
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
