Fix Spelling Error

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<!-- HTML Meta Tags -->
 		<title>#M Productions</title>
-		<meta name="description" content="HashtgaMarky's Portfolio">
+		<meta name="description" content="HashtagMarky's Portfolio">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
@@ -13,7 +13,7 @@
 		<meta property="og:url" content="https://hashtagmarky.github.io">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="#M Productions">
-		<meta property="og:description" content="HashtgaMarky's Portfolio">
+		<meta property="og:description" content="HashtagMarky's Portfolio">
 		<!--
 		You can generate this image URL dynamically: https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/{site_text}/{title_text}/{image_url}/og.png
 		Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
@@ -26,7 +26,7 @@
 		<meta property="twitter:domain" content="hashtagmarky.github.io">
 		<meta property="twitter:url" content="https://hashtagmarky.github.io">
 		<meta name="twitter:title" content="#M Productions">
-		<meta name="twitter:description" content="HashtgaMarky's Portfolio">
+		<meta name="twitter:description" content="HashtagMarky's Portfolio">
 		<!--
 		You can generate this image URL dynamically: https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/{site_text}/{title_text}/{image_url}/og.png
 		Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
