Add Links to Home Page

--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/infernape/ranger-infernape-mugshot-square.png" alt="" /></a>
+					<a href="https://hashtagmarky.github.io" class="image avatar"><img src="images/infernape/ranger-infernape-mugshot-square.png" alt="" /></a>
 					<h1><strong>Uh oh!</strong><br />
 					This is embarassing…</h1>
 				</div>
@@ -67,7 +67,8 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://github.com/HashtagMarky" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                        <li><a href="https://hashtagmarky.github.io" class="icon fa-home"><span class="label">Website</span></a></li>
+						<li><a href="https://github.com/HashtagMarky" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="https://x.com/hmprods" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://discord.gg/57QsBFdPQz" class="icon brands fa-discord"><span class="label">Discord</span></a></li>
 						<li><a href="https://tiktok.com/@HashtagMarky" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
