--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<p>My first original work, bringing a fresh experience.</p>
 								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
 								<ul class="actions">
-									<li><a href="./ikigai" class="button">Learn More About this Production</a></li>
+									<li><a href="./ikigai" class="button">Learn More About This Production</a></li>
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -86,7 +86,7 @@
 								<p>A curated take on the Generation III adventure.</p>
 								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
 								<ul class="actions">
-									<li><a href="./lablights" class="button">Learn More About this Production</a></li>
+									<li><a href="./lablights" class="button">Learn More About This Production</a></li>
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -95,7 +95,7 @@
 								<p>The Kantonian predecessor to Labradorescent Lights.</p>
 								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
 								<ul class="actions">
-									<li><a href="./stellar" class="button">Learn More About this Production</a></li>
+									<li><a href="./stellar" class="button">Learn More About This Production</a></li>
 								</ul>
 							</article>
 							<!-- More Productions
