--- a/ikigai.html
+++ b/ikigai.html
@@ -73,7 +73,7 @@
                             <div class="row">
                                 <article class="col-6 col-12-xsmall work-item">
                                     <ul class="actions">
-                                        <li><a href="https://ko-fi.com/s/8549dab3dc" class="button">Latest Versions of Pokémon Ikigai</a></li>
+                                        <li><a href="https://ko-fi.com/s/8549dab3dc" class="button">Latest Version of Pokémon Ikigai</a></li>
                                     </ul>
                                 </article>
                         -->
