--- a/discord.html
+++ b/discord.html
@@ -21,7 +21,7 @@
 		Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
 		For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
 		-->
-		<meta property="og:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/hashtagmarky.github.io%2Fdiscord/%23M%20Productions/https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fdocuments%2F53e593fe-53f4-4853-9c6c-e2a2c29312b4.png%3Ftoken%3DwWatDftAccNLjDOqucOMICEYPSusSiYccVBOV3UBRLM%26height%3D1200%26width%3D1200%26expires%3D33247448688/og.png">
+		<meta property="og:image" content="https://hashtagmarky.github.io/images/social-pages/cards/discord.png">
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
@@ -34,7 +34,7 @@
 		Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
 		For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
 		-->
-		<meta name="twitter:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/hashtagmarky.github.io%2Fdiscord/%23M%20Productions/https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fdocuments%2F53e593fe-53f4-4853-9c6c-e2a2c29312b4.png%3Ftoken%3DwWatDftAccNLjDOqucOMICEYPSusSiYccVBOV3UBRLM%26height%3D1200%26width%3D1200%26expires%3D33247448688/og.png">
+		<meta name="twitter:image" content="https://hashtagmarky.github.io/images/social-pages/cards/discord.png">
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 	</head>
