--- a/ikigai.html
+++ b/ikigai.html
@@ -19,7 +19,7 @@
 		Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
 		For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
 		-->
-		<meta property="og:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/hashtagmarky.github.io%2Fikigai/%23M%20Productions/https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fdocuments%2Fe088232a-2261-45c1-888e-bba1f708e745.png%3Ftoken%3Da5fAIXelTjRzFLXZUzDxq9MgsonpIj8YLRaL_uCroRo%26height%3D1200%26width%3D1200%26expires%3D33247448688/og.png">
+		<meta property="og:image" content="https://hashtagmarky.github.io/images/social-pages/cards/ikigai.png">
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
@@ -32,7 +32,7 @@
 		Replace the variables in the brackets with your own values and use this URL in the image tag below this comment. Ensure values are URL encoded.
 		For more information, read: https://www.opengraph.xyz/blog/how-to-implement-dynamic-open-graph-images
 		-->
-		<meta name="twitter:image" content="https://ogcdn.net/e4b8c678-7bd5-445d-ba03-bfaad510c686/v3/hashtagmarky.github.io%2Fikigai/%23M%20Productions/https%3A%2F%2Fopengraph.b-cdn.net%2Fproduction%2Fdocuments%2Fe088232a-2261-45c1-888e-bba1f708e745.png%3Ftoken%3Da5fAIXelTjRzFLXZUzDxq9MgsonpIj8YLRaL_uCroRo%26height%3D1200%26width%3D1200%26expires%3D33247448688/og.png">
+		<meta name="twitter:image" content="https://hashtagmarky.github.io/images/social-pages/cards/ikigai.png">
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 	</head>
