Update Meta Data

--- a/discord.html
+++ b/discord.html
@@ -4,10 +4,12 @@
 		<!-- HTML Meta Tags -->
 		<title>#M Productions' Discord Server</title>
 		<meta name="description" content="Keep up to date with the latest from HashtagMarky">
+		<meta name="author" content="HashtagMarky">
+		<meta name="copyright" content="HashtagMarky Productions">
+		<meta name="robots" content="noindex, follow">
         <meta http-equiv="refresh" content="5; url=https://discord.gg/57QsBFdPQz" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="robots" content="noindex, nofollow">
 		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
 		<link rel="stylesheet" href="assets/css/main.css" />
 
