--- a/404.html
+++ b/404.html
@@ -4,9 +4,11 @@
 		<!-- HTML Meta Tags -->
 		<title>Page Not Found</title>
         <meta http-equiv="refresh" content="5; url=http://hashtagmarky.github.io/" />
+		<meta name="author" content="HashtagMarky">
+		<meta name="copyright" content="HashtagMarky Productions">
+		<meta name="robots" content="noindex, follow">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="robots" content="noindex, nofollow">
 		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
 		<link rel="stylesheet" href="assets/css/main.css" />
 
