--- a/lablights.html
+++ b/lablights.html
@@ -4,6 +4,9 @@
 		<!-- HTML Meta Tags -->
 		<title>Labradorescent Lights</title>
 		<meta name="description" content="Release Page for Pokémon Labradorescent Lights">
+		<meta name="author" content="HashtagMarky">
+		<meta name="copyright" content="HashtagMarky Productions">
+		<meta name="robots" content="index, follow">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
