--- a/discord.html
+++ b/discord.html
@@ -40,6 +40,17 @@
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 	</head>
+
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-N52C5P38EM"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-N52C5P38EM');
+	</script>
+	
     <body class="is-preload">
 
 		<!-- Header -->
