Add more Google Tags

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 			gtag('config', 'G-N52C5P38EM');
 		</script>
+		<meta name="google-site-verification" content="7-DJFdIgMgq6awUyix80V61IdClaRyn9hKJSx6sHuuA" />
 
 		<!-- Facebook Meta Tags -->
 		<meta property="og:url" content="https://hashtagmarky.github.io">
