--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
 		<link rel="stylesheet" href="assets/css/main.css" />
 
+		<!-- Schema Markup -->
+		
+
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-N52C5P38EM"></script>
 		<script>
@@ -21,6 +24,8 @@
 
 			gtag('config', 'G-N52C5P38EM');
 		</script>
+
+		<!-- Google Search Verification (gtag.js) -->
 		<meta name="google-site-verification" content="7-DJFdIgMgq6awUyix80V61IdClaRyn9hKJSx6sHuuA" />
 
 		<!-- Facebook Meta Tags -->
