--- a/lablights.html
+++ b/lablights.html
@@ -12,6 +12,9 @@
 		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
 		<link rel="stylesheet" href="assets/css/main.css" />
 
+		<!-- Schema Markup -->
+		
+
 		<!-- Google tag (gtag.js) -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-N52C5P38EM"></script>
 		<script>
