--- a/lablights.html
+++ b/lablights.html
@@ -9,7 +9,11 @@
 		<meta name="robots" content="index, follow">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="icon" type="image/x-icon" href="images/infernape/pmd-infernape.ico">
+		<link rel="icon" type="image/x-icon" href="images/infernape/favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180" href="images/infernape/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/infernape/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/infernape/favicon/favicon-16x16.png">
+		<link rel="manifest" href="images/infernape/favicon/site.webmanifest">
 		<link rel="stylesheet" href="assets/css/main.css" />
 
 		<!-- Schema Markup -->
