Update Favicons Again

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<meta name="msapplication-square150x150logo" content="https://hashtagmarky.github.io/images/infernape/favicon/mstile-150x150.png" />
 		<meta name="msapplication-wide310x150logo" content="https://hashtagmarky.github.io/images/infernape/favicon/mstile-310x150.png" />
 		<meta name="msapplication-square310x310logo" content="https://hashtagmarky.github.io/images/infernape/favicon/mstile-310x310.png" />
+		<link rel="mask-icon" href="https://hashtagmarky.github.io/images/infernape/favicon/pmd-infernape.svg" color="#f09040">
 
 
 		<!-- Schema Markup -->
