--- a/discord.html
+++ b/discord.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 
 		<!-- Favicons -->
+		<link rel="icon" type="image/x-icon" href="https://hashtagmarky.github.io/images/infernape/favicon.ico">
 		<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://hashtagmarky.github.io/images/infernape/favicon/apple-touch-icon-57x57.png" />
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://hashtagmarky.github.io/images/infernape/favicon/apple-touch-icon-114x114.png" />
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://hashtagmarky.github.io/images/infernape/favicon/apple-touch-icon-72x72.png" />
