--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 					<h1>Hi there!<br /> 
 					I'm <strong>HashtagMarky</strong>, a self-taught<br />
 					rom hacker, who is currently working<br />
-					on multiple projects, including<br />
-					<a href="./ikigai">Pokémon Ikigai</a>.</h1>
+					on <a href="./ikigai">Pokémon Ikigai</a>.</h1>
 				</div>
 			</header>
 
@@ -99,18 +98,21 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2 style="text-align: center;">Projects</h2>
+							<h2 style="text-align: center;">Productions</h2>
 						</header>
+						<p style="text-align: center;">I began developing <strong>Pokémon Ikigai</strong> in 2024, hoping to deliver a completely original and truly unique experience. With this in mind, I am always open to feedback and fresh ideas.
+						<br><br>With this being said, I must thank the folk over at <strong>pret</strong>, <strong>RHH</strong> & <strong>Team Aqua's Hideout</strong> for the immense work they've put into <strong>pokeemerald</strong> and all the resources they've created.</p>
+						<!-- Old Section
 						<p style="text-align: center;">I began developing <strong>Pokémon Ikigai</strong>, my latest project, in 2024, with it being my most ambitious yet. Most of my time developing is spent on <strong>Ikigai</strong>, hoping to deliver a completely original and truly unique experience. With this in mind, I am always open to feedback and fresh ideas.</p>
 						<p style="text-align: center;">Unlike <strong>Ikigai</strong>, my first two projects are dedicated to my partner, two games designed with them almost exclusively in mind. Whilst <strong>Ikigai</strong> is a sequel to them both, you do not need to play them in order to fully experience <strong>Ikigai</strong>. While being projects dedicated to just one player, they rely heavily on the works of other rom hackers, namely <strong>danenders</strong>. Like the repositories these projects were forked from, the source code is publicly available on my <a href="https://github.com/hashtagmarky">GitHub</a>.</p>
-						<!-- Learn More Button
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
 						-->
+						<a href="images/projects/ikigai_title_solid_large.png" class="image fit"><img src="images/projects/ikigai_title_solid_large.png" alt="Pokémon Ikigai Title Screens" /></a>
+						<ul class="actions">
+							<a href="./ikigai" class="button" style="display: block; width: 100%; text-align: center; margin-left: 13px;">Learn More About This Production</a>
+						</ul>
 					</section>
 
-				<!-- Two -->
+				<!-- Two --> <!--
 					<section id="two">
 						<h2>Productions</h2>
 						<div class="row">
@@ -118,7 +120,7 @@
 								<a href="images/projects/beta-ikigai-box-art.png" class="image fit thumb"><img src="images/projects/beta-ikigai-box-art.png" alt="Pokémon Ikigai Box Art - Beta" /></a>
 								<h3>Pokémon Ikigai</h3>
 								<p>My first original work, bringing a fresh experience.</p>
-								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
+								<div>&nbsp;</div> <!-- Invisible Character for Padding --> <!--
 								<ul class="actions">
 									<li><a href="./ikigai" class="button">Learn More About This Production</a></li>
 								</ul>
@@ -127,7 +129,7 @@
 								<a href="images/projects/lablights-box-art.png" class="image fit thumb"><img src="images/projects/lablights-box-art.png" alt="Pokémon Labradorescent Lights Box Art" /></a>
 								<h3>Pokémon Labradorescent Lights</h3>
 								<p>A curated take on the Generation III adventure.</p>
-								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
+								<div>&nbsp;</div> <!-- Invisible Character for Padding --> <!--
 								<ul class="actions">
 									<li><a href="./lablights" class="button">Learn More About This Production</a></li>
 								</ul>
@@ -136,7 +138,7 @@
 								<a href="images/projects/beta-stellar-box-art.png" class="image fit thumb"><img src="images/projects/beta-stellar-box-art.png" alt="Pokémon Stellar Spirits Box Art - Beta" /></a>
 								<h3>Pokémon Stellar Sprits</h3>
 								<p>The Kantonian predecessor to Labradorescent Lights.</p>
-								<div>&nbsp;</div> <!-- Invisible Character for Padding -->
+								<div>&nbsp;</div> <!-- Invisible Character for Padding --> <!--
 								<ul class="actions">
 									<li><a href="./stellar" class="button">Learn More About This Production</a></li>
 								</ul>
