--- a/ikigai.html
+++ b/ikigai.html
@@ -84,8 +84,7 @@
 					<h1>Hi there!<br /> 
 					I'm <strong>HashtagMarky</strong>, a self-taught<br />
 					rom hacker, who is currently working<br />
-					on multiple projects, including<br />
-					<a href="./ikigai">Pokémon Ikigai</a>.</h1>
+					on <a href="./ikigai">Pokémon Ikigai</a>.</h1>
 				</div>
 			</header>
 
