--- a/index.html
+++ b/index.html
@@ -106,10 +106,12 @@
 						<p style="text-align: center;">I began developing <strong>Pokémon Ikigai</strong>, my latest project, in 2024, with it being my most ambitious yet. Most of my time developing is spent on <strong>Ikigai</strong>, hoping to deliver a completely original and truly unique experience. With this in mind, I am always open to feedback and fresh ideas.</p>
 						<p style="text-align: center;">Unlike <strong>Ikigai</strong>, my first two projects are dedicated to my partner, two games designed with them almost exclusively in mind. Whilst <strong>Ikigai</strong> is a sequel to them both, you do not need to play them in order to fully experience <strong>Ikigai</strong>. While being projects dedicated to just one player, they rely heavily on the works of other rom hackers, namely <strong>danenders</strong>. Like the repositories these projects were forked from, the source code is publicly available on my <a href="https://github.com/hashtagmarky">GitHub</a>.</p>
 						-->
-						<a href="images/projects/ikigai_title_solid_large.png" class="image fit"><img src="images/projects/ikigai_title_solid_large.png" alt="Pokémon Ikigai Title Screens" /></a>
-						<ul class="actions">
-							<a href="./ikigai" class="button" style="display: block; width: 100%; text-align: center; margin-left: 13px;">Learn More About This Production</a>
-						</ul>
+						<div style="width: 100%; text-align: center;">
+							<a href="images/projects/ikigai_title_solid_large.png" class="image fit" style="display: block; max-width: 100%; margin: 0 auto;">
+							  <img src="images/projects/ikigai_title_solid_large.png" alt="Pokémon Ikigai Title Screens" style="width: 100%; height: auto;" />
+							</a>
+							<a href="./ikigai" class="button" style="display: block; width: 100%; max-width: 100%; margin: 20px auto 0; text-align: center;">Learn More About This Production</a>
+						  </div>																			  
 					</section>
 
 				<!-- Two --> <!--
